--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ pycocotools
 tqdm
 pillow
 tensorboard >= 1.14
+thop
 
 # Nvidia Apex (optional) for mixed precision training --------------------------
 # git clone https://github.com/NVIDIA/apex && cd apex && pip install -v --no-cache-dir --global-option="--cpp_ext" --global-option="--cuda_ext" . --user
